2007-12-19  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/installer.rb:  Revert change that only wrapped
	executables with #!.
	* lib/rubygems/specification.rb:  Warn about a lot of things that
	could be wrong with gemspecs on build, including missing #!.
	* lib/rubygems/remote_installer.rb:  Deleted.

2007-12-18  Luis Lavena  <luislavena@gmail.com>

	* lib/rubygems/commands/mirror_command.rb: Work around URI::parse
	processing file:// scheme and drive paths on Windows.
	* test/test_gem_commands_mirror_command.rb: ditto.

2007-12-17  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/installer.rb:  Copy files into bindir if they don't
	have a shebang.  Bug reported by Luis Lavena.
	* lib/rubygems/server.rb:  Handle platforms in Gem::Server#quick.
	Exactly match gem names.  Bugs reported by Chad Woolley.
	* lib/rubygems/platform.rb:  Remove platform constants in favor of
	Gem::Platform::CURRENT.  Bug reported by Luis Lavena.
	* lib/rubygems/dependency_installer.rb:  Work around Dir::glob not
	understanding File::ALT_SEPARATOR.  Bug submitted by Luis Lavena.

2007-12-16  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/remote_fetcher.rb:  Be more verbose in error messages
	from OpenURI.
	* lib/rubygems/server.rb:  Be more verbose in error/missing responses.

2007-12-15  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/installer.rb:  Output extension build results when
	really verbose.  From bug #15853 John Croisant.
	* lib/rubygems/specification.rb:  Fix backwards compatibility with
	0.9.4, don't allow the platform to be nil or an empty string.  Bug
	#16177 by Dan Manges.
	* setup.rb:  Re-exec setup.rb if rubygems is loaded and RUBYOPT is
	set.  Fixes bug #15974 by Joshua Sierles.
	* lib/rubygems/update_command.rb:  Tweak formatting of updated
	message.  Bug #15625 by Bil Kleb.
	* lib/rubygems/remote_fetcher.rb:  Add URI to exception message for
	Gem::RemoteFetcher#fetch_size.  Bug #14801 by Bil Kleb.

2007-12-14  Eric Hodel  <drbrain@segment7.net>
