@@ -73,6 +73,10 @@ class TestGemPlatform < RubyGemTestCase
       'i386-mingw32'           => ['x86',       'mingw32',   nil],
       'i386-mswin32'           => ['x86',       'mswin32',   nil],
       'i386-mswin32_80'        => ['x86',       'mswin32',   '80'],
+      'i386-mswin32-80'        => ['x86',       'mswin32',   '80'],
+      'x86-mswin32'            => ['x86',       'mswin32',   nil],
+      'x86-mswin32_60'         => ['x86',       'mswin32',   '60'],
+      'x86-mswin32-60'         => ['x86',       'mswin32',   '60'],
       'i386-netbsdelf'         => ['x86',       'netbsdelf', nil],
       'i386-openbsd4.0'        => ['x86',       'openbsd',   '4.0'],
       'i386-solaris2.10'       => ['x86',       'solaris',   '2.10'],
